--- a/about_me.html
+++ b/about_me.html
@@ -3,95 +3,44 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Me</title>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="header">
-            <div class="nav" id="pc">
-                <div class="col-4"></div>
-                <a href="index.html" class="col-2">Home</a>
-                <a href="about_me.html" class="col-2">About</a>
-                <a href="projects.html" class="col-2">Projects</a>
-                <a href="contact.html" class="col-2">Contact</a>
-            </div>
-            <div class="nav" id="mob">
-                <a href="index.html" class="col-3">Home</a>
-                <a href="about_me.html" class="col-3">About</a>
-                <a href="projects.html" class="col-3">Projects</a>
-                <a href="contact.html" class="col-3">Contact</a>
-            </div>
-        </div>
-        <div class="section">
-            <img src="images/jin-woo.jpg" alt="avatar" id="avatar" width=400px;>
-            <div id="aboutme">
-                Hello there. My name is Pramish Aryal. I am a 18 year old college freshman studying Computer Engineering
-                and I aim to be a game developer.
-                And I know what you're thinking, why would a guy who wants to be a game dev study computer engineering
-                instead of getting a proper Computer Science degree or even study on his own. Well, the answer to that
-                my friend is, <B>Scholarship</B>. It's actually really hard to find a proper uni that'll get me a noice
-                CS degree from where I am. Either they offer no direct CS degree, or, they will ask for a lot of money.
-                And a lot of money is something I do not have. Simply put, I'm broke :( . So I did what any sensible man
-                would do, got a scholarship to study computer engineering, and throughout my college life, I'll learn to
-                make games and maybe just maybe I'll actually create one. So stay tuned my dudes. Enough about that, not
-                onto the good stuff. To describe myself in a single word, I AM LAZY. And hence, I spend most of my days
-                watching anime, movies, tv shows and playing games instead of doing something productive.
-                Some of my favourite anime and tv series include:
-                <table id="list">
-                    <thead>
-                        <tr>
-                            <td>Type</td>
-                            <td>Name</td>
-                            <td>Genre</td>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Anime</td>
-                            <td>
-                                <ul class="likes">
-                                    <li>One Piece</li>
-                                    <li>Steins;Gate</li>
-                                    <li>FullMetal Alchemist</li>
-                                    <li>Hunter x Hunter</li>
-                                    <li>JoJo's Bizzare Adventure</li>
-                                </ul>
-                            </td>
-                            <td>
-                                <ul class="likes">
-                                    <li>Shounen, Fantasy, Action, Adventure</li>
-                                    <li>Sci-Fi, Thriller, Seinen, Drama</li>
-                                    <li>Action, Adventure, Magic, Military, Fantasy, Drama</li>
-                                    <li>Shounen, Fantasy, Action, SuperPower </li>
-                                    <li>JoJo</li>
-                                </ul>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Tv Show</td>
-                            <td>Breaking Bad</td>
-                            <td>Crime, Thriller</td>
-                        </tr>
-                    </tbody>
-                </table>
-
-                <a href="#More" id="cross"> <button id="lbutton">More..</button></a>
-                <div id="More">
-                    <div class="alert alert-success" role="alert" id="cross">
-                        You Fell for it...
-                    </div>
-                    <img src="images/thunder cross split.png" width="500px"><br>
-                    Just kidding, I just wanted to show off that feature.<br>
-                    But there's more to be added, but as I said I'm too lazy to do so..
-                </div>
-
-                </br>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container"><a class="navbar-brand" href="index.html">A.Pramish</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="about_me.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
+    </nav>
+
 </body>
 
 </html>
