--- a/index.html
+++ b/index.html
@@ -6,36 +6,36 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="sass.css">
     <title>Portfolio</title>
 </head>
 
 <body>
-    <p>Sup Sp</p>
-    <div class="container-fluid">
-        <div class="header">
-            <div class="nav" id="pc">
-                <div class="col-4"></div>
-                <a href="index.html" class="col-2">Home</a>
-                <a href="about_me.html" class="col-2">About</a>
-                <a href="projects.html" class="col-2">Projects</a>
-                <a href="contact.html" class="col-2">Contact</a>
-            </div>
-            <div class="nav" id="mob">
-                <a href="index.html" class="col-3">Home</a>
-                <a href="about_me.html" class="col-3">About</a>
-                <a href="projects.html" class="col-3">Projects</a>
-                <a href="contact.html" class="col-3">Contact</a>
-            </div>
-        </div>
-
-        <div class="section">
-            <div id="text">
-                Welcome, to my CS50 project showcase. During the duration of my course this will do as my version of
-                project0, and after I pass this(hopefully), I might just turn this into my portfolio.
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container"><a class="navbar-brand" href="index.html">A.Pramish</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about_me.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
-        </p>
+    </nav>
+    <div class="container" id="main-content">
+        <div id="text">
+            Welcome, to my CS50 project showcase. During the duration of my course this will do as my version of
+            project0, and after I pass this(hopefully), I might just turn this into my portfolio.
+        </div>
+    </div>
 </body>
 
 </html>
