--- a/pong.html
+++ b/pong.html
@@ -30,10 +30,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about_me.html">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="projects.html" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="projects.html">Projects</a>
+                            <a class="dropdown-item" href="pong.html">Pong</a>
+                        </div>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -41,13 +48,7 @@
         </div>
     </nav>
     <div class="container" id="main-content">
-        <div id="contact">
-            You can contact me at:<br>
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-reddit"></a>
-        </div>
+
     </div>
 </body>
 
