--- a/projects.html
+++ b/projects.html
@@ -3,32 +3,60 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+    </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Projects</title>
 </head>
 
 <body>
-    <div class="container-fluid">
-
-        <div class="header">
-            <div class="nav" id="pc">
-                <div class="col-4"></div>
-                <a href="index.html" class="col-2">Home</a>
-                <a href="about_me.html" class="col-2">About</a>
-                <a href="projects.html" class="col-2">Projects</a>
-                <a href="contact.html" class="col-2">Contact</a>
-            </div>
-            <div class="nav" id="mob">
-                <a href="index.html" class="col-3">Home</a>
-                <a href="about_me.html" class="col-3">About</a>
-                <a href="projects.html" class="col-3">Projects</a>
-                <a href="contact.html" class="col-3">Contact</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container"><a class="navbar-brand" href="index.html">A.Pramish</a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item ">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about_me.html">About</a>
+                    </li>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="projects.html" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="projects.html">Projects</a>
+                            <a class="dropdown-item" href="pong.html">Pong</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
-        <div id="text"">
-            Oops haven't done anything, come back later.
+    </nav>
+    <div class="container" id="main-content">
+        <div class="card" style="width: 18rem;">
+            <img src="images/pong.png" class="card-img-top" alt="Pong Preview">
+            <div class="card-body">
+                <h5 class="card-title">Pong</h5>
+                <p class="card-text">
+                    Well, this was my first project using the WinApi. Pong
+                </p>
+                <a href="pong.html" class="btn btn-primary">Learn More.</a>
+            </div>
         </div>
     </div>
 </body>
