--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
     </nav>
     <div class="container" id="main-content">
         <div class="card" style="width: 18rem;">
-            <img src="images/pong.png" class="card-img-top" alt="Pong Preview">
+            <img src="images/Pong-preview.png" class="card-img-top" alt="Pong Preview">
             <div class="card-body">
                 <h5 class="card-title">Pong</h5>
                 <p class="card-text">
