--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
         </div>
     </nav>
     <div class="container" id="main-content">
-        <div class="card" style="width: 18rem;">
+        <div class="card mx-auto" style="width: 18rem;">
             <img src="images/Pong-preview.png" class="card-img-top" alt="Pong Preview">
             <div class="card-body">
                 <h5 class="card-title">Pong</h5>
