I think its done?

--- a/about_me.html
+++ b/about_me.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container"><a class="navbar-brand" href="index.html">A.Pramish</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,7 +44,72 @@
             </div>
         </div>
     </nav>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>About Me</h1>
+        </div>
+        <hr>
+        <p id="text">
+            Hello there. My name is Pramish Aryal. I am a 18 year old college freshman studying Computer Engineering
+            and I aim to be a game developer. And I know what you're thinking, why would a guy who wants to be a game
+            dev study computer engineering instead of getting a proper Computer Science degree or even study on his own.
+            Well, the answer to that my friend is, <B>Scholarship</B>. It's actually really hard to find a proper uni
+            that'll get me a noice CS degree from where I am. Either they offer no direct CS degree, or, they will ask
+            for a lot of money. And a lot of money is something I do not have. Simply put, I'm broke :( . So I did what
+            any sensible man would do, got a scholarship to study computer engineering, and throughout my college life,
+            I'll learn to make games and maybe just maybe I'll actually create one. So stay tuned my dudes. Enough about
+            that, now onto the good stuff. To describe myself in a single word, I AM LAZY. And hence, I spend most of my
+            days watching anime, movies, tv shows and playing games instead of doing something productive.
+            Some of my favourite anime and tv series include:
+        </p>
+        <table class="table table-dark col-sm-12">
+            <thead>
+                <tr>
+                    <th>Type</th>
+                    <th>Name</th>
+                    <th>Genre</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Anime</td>
+                    <td>One Piece</td>
+                    <td>Fantasy, Action, Adventure</td>
+                </tr>
+                <tr>
+                    <td>Anime</td>
+                    <td>Hunter X Hunter</td>
+                    <td>Fantasy, Action, Adventure, Supernatural</td>
+                </tr>
+                <tr>
+                    <td>Anime</td>
+                    <td>Steins;Gate</td>
+                    <td>Sci-Fi, Action, Thriller</td>
+                </tr>
+                <tr>
+                    <td>Anime</td>
+                    <td>FullMetal Alchemist: BrotherHood</td>
+                    <td>Fantasy, Action, Adventure, Magic</td>
+                </tr>
+                <tr>
+                    <td>Tv Show</td>
+                    <td>Breaking Bad</td>
+                    <td>Crime, Thriller</td>
+                </tr>
 
+            </tbody>
+        </table>
+
+    </div>
+
+    <div class="footer bottom">
+        Pramish Aryal/Student<br>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-reddit"></a>
+        <a href="#navbar"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
+    </div>
 </body>
 
 </html>
