--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container"><a class="navbar-brand" href="index.html">A.Pramish</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,11 +44,26 @@
             </div>
         </div>
     </nav>
-    <div class="container" id="main-content">
-        <div id="text">
-            Welcome, to my CS50 project showcase. During the duration of my course this will do as my version of
-            project0, and after I pass this(hopefully), I might just turn this into my portfolio.
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Welcome!!!</h1>
+            <h3>To my Portfolio</h3>
         </div>
+        <hr>
+
+        <p id="text">
+            This is my project0 for the cs50. Currently its still underdoing development and by the end of the
+            course I want to turn it into my portfolio.
+        </p>
+    </div>
+    <br><br><br><br><br><br>
+    <div class="footer bottom">
+        Pramish Aryal/Student<br>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-reddit"></a>
+        <a href="#navbar"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>
     </div>
 </body>
 
