--- a/Cman.html
+++ b/Cman.html
@@ -16,16 +16,12 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Contact</title>
+    <title>Projects/Cman</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="navbar">
         <div class="container"><a class="navbar-brand" href="index.html">A.Pramish</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -34,40 +30,50 @@
                     <li class="nav-item">
                         <a class="nav-link" href="about_me.html">About</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="projects.html" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Projects
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="projects.html">Projects</a>
+                            <a class="dropdown-item" href="pong.html">Pong</a>
+                            <a class="dropdown-item" href="Cman.html">C-man</a>
+                        </div>
                     </li>
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-
     <div class="container">
         <div class="jumbotron">
-            <h1>Contact Me</h1>
+            <h1>C-Man</h1>
         </div>
         <hr>
-        <form id="contact-me">
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <input type="email" class="form-control" placeholder="Email">
-                </div>
-                <div class="form-group col-md-6">
-                    <input type="password" class="form-control" placeholder="Password">
-                </div>
-            </div>
-            <div class="form-row">
-                <textarea class="form-control" placeholder="Subject"></textarea>
-            </div>
-            <button type="submit" id="smbt" class="btn btn-dark">Submit</button>
-        </form>
-    </div>
-    <!--  Nooo you can't just use break if you don't want to get the footer to get to the end of the page
-        Ha Ha HTML go --> <br><br><br><br><br><br>
 
+        <div class="row">
+            <div class="proj-desc col-sm-6">
+                <p>
+                    As our project for the first semester of computer engineering (aah computer engineering, sounds good
+                    doesn't but its not trust me, not here at least), my friends and I did this project. As a clone of
+                    pacman but using the 'C' character as our protoganist we named it C-Man. A great name I know.
+                    At it's current stage it is far from polished. We have not even implemented any proper data
+                    structures nor algorithms.
+                </p>
+                <p>
+                    So what I was thinking of doing was, to include multiple protoganists to give the players an options
+                    of local multiplayer. And the game would be named "C-Men" cuz you know many "C"'s. But thats just me
+                    overdoing things.
+                </p>
+            </div>
+            <div class="col-sm-6">
+                <img src="images/c-man-game-1.png" alt="cman-game preview" class="img-thumbnail">
+            </div>
+        </div>
+    </div>
     <div class="footer bottom">
         Pramish Aryal/Student<br>
         <a href="#" class="fa fa-facebook"></a>
