I think its done?

--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
             course I want to turn it into my portfolio.
         </p>
     </div>
-    <br><br><br><br><br><br>
-    <div class="footer bottom">
+    <div class="footer nav-bottom">
         Pramish Aryal/Student<br>
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-linkedin"></a>
