--- a/pong.html
+++ b/pong.html
@@ -75,7 +75,7 @@
             </div>
         </div>
     </div>
-    <div class="footer bottom">
+    <div class="footer">
         Pramish Aryal/Student<br>
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-linkedin"></a>
