--- a/about_me.html
+++ b/about_me.html
@@ -102,7 +102,7 @@
 
     </div>
 
-    <div class="footer bottom">
+    <div class="footer">
         Pramish Aryal/Student<br>
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-linkedin"></a>
