--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
         </form>
     </div>
     <!--  Nooo you can't just use break if you don't want to get the footer to get to the end of the page
-        Ha Ha HTML go --> <br><br><br><br><br><br>
+        Ha Ha HTML go <br><br><br><br><br><br>-->
 
     <div class="footer bottom">
         Pramish Aryal/Student<br>
