--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             course I want to turn it into my portfolio.
         </p>
     </div>
+    <!--  Nooo you can't just use break if you don't want to get the footer to get to the end of the page
+        Ha Ha HTML go <br><br><br><br><br><br>-->
+    <br><br><br><br><br><br><br><br><br>
     <div class="footer nav-bottom">
         Pramish Aryal/Student<br>
         <a href="#" class="fa fa-facebook"></a>
